(website) Fix spacing in nav list
The items under "other resources" weren't being properly indented
because they're in a `ul` which was set to padding: 0px. We now only
remove the padding on the _outer_ `ul`.

--- a/docs/assets/css/style.scss
+++ b/docs/assets/css/style.scss
@@ -17,10 +17,6 @@ h1 {
 .sidebar {
   padding: 2rem;
   background: $sidebar-background;
-
-  ul {
-    padding: 0px;
-  }
 }
 
 .main-content {
@@ -33,6 +29,8 @@ h1 {
 
 .nav-list {
   list-style: none;
+
+  padding: 0px;
 }
 
 .nav-list li a {
